[workspace]
resolver = "3"
members = [
    "crates/lumencast-protocol",
    "crates/lumencast-server",
    "crates/lumencast-client",
    "crates/lumencast-conformance",
    "examples/basic-scoreboard",
    "examples/high-throughput-feed",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "Apache-2.0"
authors = ["Lumencast contributors"]
homepage = "https://github.com/Lumencast/lumencast-rs"
repository = "https://github.com/Lumencast/lumencast-rs"
documentation = "https://docs.rs/lumencast-protocol"
readme = "README.md"
keywords = ["lumencast", "lsdp", "websocket", "broadcast", "real-time"]
categories = ["network-programming", "web-programming::websocket"]

[workspace.dependencies]
lumencast-protocol = { path = "crates/lumencast-protocol", version = "0.1.0" }
lumencast-server   = { path = "crates/lumencast-server",   version = "0.1.0" }
lumencast-client   = { path = "crates/lumencast-client",   version = "0.1.0" }

serde            = { version = "1.0", features = ["derive"] }
serde_json       = "1.0"
thiserror        = "1.0"
async-trait      = "0.1"
sha2             = { version = "0.10", default-features = false }

tokio            = { version = "1", default-features = false }
tokio-stream     = { version = "0.1", default-features = false }
tokio-tungstenite = { version = "0.24", default-features = false }
reqwest          = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum             = { version = "0.7", default-features = false }
axum-server      = { version = "0.7", default-features = false }
tower            = { version = "0.5", default-features = false }
tower-http       = { version = "0.6", default-features = false }
http             = "1"
futures-util     = { version = "0.3", default-features = false }
tracing          = "0.1"
tracing-subscriber = { version = "0.3", default-features = false }
dashmap          = "6"
parking_lot      = "0.12"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
needless_pass_by_value = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
