[package]
name = "lumencast-conformance"
description = "Conformance harness for LSDP/1 — drives an implementation through the official scenarios."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
lumencast-protocol = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
