[package]
name = "lumencast-conformance"
description = "Conformance harness for LSDP/1 — drives an implementation through the official scenarios."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
lumencast-protocol = { workspace = true }
lumencast-client   = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
serde_yaml_ng    = { workspace = true }
thiserror        = { workspace = true }
sha2             = { workspace = true }
tokio            = { workspace = true, features = ["macros", "rt-multi-thread", "time", "net", "sync"] }
tokio-tungstenite = { workspace = true, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util     = { workspace = true, features = ["std", "sink"] }
reqwest          = { workspace = true }
http             = { workspace = true }
tracing          = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
