[package]
name = "high-throughput-feed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
lumencast-server = { workspace = true }
serde_json       = { workspace = true }
tokio            = { workspace = true, features = ["macros", "rt-multi-thread", "time", "signal"] }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
